k8s/fluentd-cloudwatch.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-cloudwatch
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: fluentd-cloudwatch
  template:
    metadata:
      labels:
        name: fluentd-cloudwatch
    spec:
      serviceAccountName: fluentd
      tolerations:
        - operator: "Exists"
      containers:
        - name: fluentd
          image: public.ecr.aws/aws-observability/aws-for-fluentd:stable
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: fluentd-config
              mountPath: /fluentd/etc
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: fluentd-config
          configMap:
            name: fluentd-config
