k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: task2-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task2-app
  template:
    metadata:
      labels:
        app: task2-app
    spec:
      containers:
        - name: app-container
          image: 489994096722.dkr.ecr.us-east-2.amazonaws.com/task2-app:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: task2-app
spec:
  type: ClusterIP
  selector:
    app: task2-app
  ports:
    - name: http
      port: 3000
      targetPort: 3000
